--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "angular-boilerplate",
+    "name": "angular-signup-verification-boilerplate",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
@@ -20,7 +20,7 @@
         "@angular/platform-browser-dynamic": "^17.3.2",
         "@angular/router": "^17.3.2",
         "rxjs": "^6.5.5",
-        "tslib": "^2.6.2",
+        "tslib": "^2.0.0",
         "zone.js": "^0.14.4"
     },
     "devDependencies": {
@@ -41,6 +41,6 @@
         "protractor": "^7.0.0",
         "ts-node": "^8.3.0",
         "tslint": "^6.1.0",
-        "typescript": "^5.4.2"
+        "typescript": "^5.4.3"
     }
 }
